[package]
name = "delaunay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
ordered-float = "1.1.1"

[lib]
name = "delaunay"
path = "src/lib.rs"

[[bin]]
name = "delaunay-bin"
path = "src/main.rs"